# high-command-api

./: .env.example  .gitignore  COMPLETE_GUIDE.md  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  MCP_ALIGNMENT_SUMMARY.md  Makefile  PROJECT_SUMMARY.md  QUICKREF.sh  README.md  TESTING_GUIDE.md  TEST_COVERAGE_SUMMARY.md  TEST_FIXES_SUMMARY.md  WORKFLOW_TEST_RESULTS.md  app.py  collector.py  config.py  database.py  demo.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  scraper.py
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: auto-assign.yml  tests.yml
docs/: API.md  ARCHITECTURE.md  BACKEND_DATA_REFRESH.md  ENDPOINTS.md  FILTERING_ENHANCEMENTS.md  IMPLEMENTATION.md  QUICKREF.md  README.md  STATUS_REPORT.md  TEST_REORGANIZATION.md
src/: __init__.py  app.py  collector.py  config.py  database.py  scraper.py
tests/: __init__.py  conftest.py  demo.py  test_app.py  test_collector.py  test_config.py  test_coverage_gaps.py  test_database.py  test_database_coverage.py  test_missions.py  test_scraper.py  test_statistics.py  test_system.py  test_war_status.py  test_world_info.py
